--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -44,6 +45,7 @@
     "eslint-plugin-import": "^2.26.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^2.0.0",
     "stylelint-scss": "^3.21.0"
   }
 }
